Fixes #42. Menu z-index on news page.

--- a/resources/sass/components/about.scss
+++ b/resources/sass/components/about.scss
@@ -21,7 +21,7 @@
 
     .__content__ {
       border-radius: 8px;
-      z-index: 99;
+      z-index: 3;
       width: 100%;
       height: 100%;
       position: relative;
